# pi-photo-frame

./: .failed-files.json5  .gitignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json5  docker-entrypoint.sh  meson.build
.cargo/: config
.github/workflows/: build-app.yml  release.yml
builder/: Dockerfile  docker-entrypoint.sh  rpi_rootfs.py
data/: failed-files.json5  meson.build
data/gtk/: play_pause_button.ui  window.ui
data/resources/: meson.build  resources.gresource.xml  style.css
debian/: service
src/: application.rs  config.rs  main.rs  meson.build  window.rs
src/controllers/: application.rs
src/geocoder/: imp.rs  mod.rs
src/gui/: application.rs  main_view.rs  mod.rs  play_pause_button.rs
src/photo/: imp.rs  mod.rs  provider.rs
src/style/: style.css
src/utils/: macros.rs  mod.rs  unsafe_wrapper.rs
