[package]
name = "photo-frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.7", package = "gtk4", features = ["v4_6"] }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4.1"
rand = "0.8.5"
rumqttc = "0.11.0"
run_script = "0.9.0"
kamadak-exif = "0.5.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
