[package]
name = "photo-frame"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Raspberry Pi Photo Frame"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Mihai Costea <mihai@mcostea.com>"
copyright = "2022, Mihai Costea <mihai@mcostea.com>"
license-file = ["LICENSE", "0"]
depends = "$auto, libgtk-4-1, openssl"
maintainer-scripts = "debian/"
assets = [
    ["config.json5", "/etc/pi-photo-frame.json5", "644"],
    ["target/release/photo-frame", "/usr/bin/photo-frame", "755"],
    ["data/resources/pause-icon.svg", "/usr/local/lib/pi-photo-frame/resources/pause-icon.svg", "755"],
    ["data/resources/play-icon.svg", "/usr/local/lib/pi-photo-frame/resources/play-icon.svg", "755"],
]
conf-files = [
    "/etc/pi-photo-frame.json5"
]

[package.metadata.deb.systemd-units]
start = false

[dependencies]
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_6"] }
gvdb-macros = "0.1.10"
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
async-trait = "0.1.73"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4.1"
rand = "0.8.5"
rumqttc = "0.22.0"
run_script = "0.9.0"
kamadak-exif = "0.5.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"
sentry = "0.32.2"